--- a/announcements.html
+++ b/announcements.html
@@ -69,6 +69,8 @@
 
 <ul class="announcements">
 
+  <li><b>04/01:  PuddleStore is out</b> <br />
+    <br /></li>
   <li><b>03/25:  Lab 3 (PuddleStore) will become a gearup session instead</b> <br />
     <br /></li>
   <li><b>03/24:  Raft due date is Apr 1st</b> <br />
@@ -101,7 +103,7 @@
 <!-- main -->
 
 <footer class="text-center py-4 font-weight-bold footer">
-  <p class="lastupdated"> Last modified: 2021-04-01 18:43:40 -0400 </p>
+  <p class="lastupdated"> Last modified: 2021-04-02 02:27:57 -0400 </p>
   © 2021 CS1380  | Brown University
 </footer>
 
