--- a/assignments.html
+++ b/assignments.html
@@ -105,7 +105,8 @@
 </tr>
 
 <tr>
- <td>Assignment 4: Puddlestore</td>
+ <td>Assignment 4: <a href="content/projects/puddlestore.pdf">Puddlestore</a>
+    [<a href="https://classroom.github.com/g/AtfiIO24">Stencil</a>]</td>
  <td>Apr 1</td>
  <td>Apr 12</td>
  <td></td>
@@ -339,7 +340,7 @@
 <!-- main -->
 
 <footer class="text-center py-4 font-weight-bold footer">
-  <p class="lastupdated"> Last modified: 2021-04-01 18:43:40 -0400 </p>
+  <p class="lastupdated"> Last modified: 2021-04-02 02:27:57 -0400 </p>
   © 2021 CS1380  | Brown University
 </footer>
 
