--- a/assignments.html
+++ b/assignments.html
@@ -105,11 +105,13 @@
 </tr>
 
 <tr>
- <td>Assignment 4: <a href="content/projects/puddlestore.pdf">Puddlestore</a>
+ <td>Assignment 4: <a href="content/projects/puddlestore-2.pdf">Puddlestore</a>
     [<a href="https://classroom.github.com/g/AtfiIO24">Stencil</a>]</td>
  <td>Apr 1</td>
  <td>Apr 12</td>
- <td></td>
+ <td>
+   [<a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0568c9e9-25fb-4d85-985d-acff01660bb6">Gear up Recording</a>]
+   [<a href="https://drive.google.com/file/d/1DbfBP93AwuiTzt4NVYPuvJtq2V1hb0lf/view">Slide</a>]</td>
 </tr>
 
 </table>
@@ -340,7 +342,7 @@
 <!-- main -->
 
 <footer class="text-center py-4 font-weight-bold footer">
-  <p class="lastupdated"> Last modified: 2021-04-02 02:27:57 -0400 </p>
+  <p class="lastupdated"> Last modified: 2021-04-03 19:20:35 -0400 </p>
   © 2021 CS1380  | Brown University
 </footer>
 
